--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 services:
 
   app:
-    build: Dockerfile
+    build: .
     restart: unless-stopped
     command: /bin/bash -c "poetry run python manage.py collectstatic --noinput && poetry run python manage.py migrate && poetry run uvicorn app.asgi:application --host 0.0.0.0 --port 8000 --workers 4"
     volumes:
