fix docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - media_volume:/app/media
     env_file:
       - .env
+    ports:
+      - "8000:8000"
     network_mode: 'host'
 
   nginx:
