--- a/nginx/default.template
+++ b/nginx/default.template
@@ -1,7 +1,11 @@
 upstream backend {
     server 127.0.0.1:8000;
 }
+server {
+    listen 80;
+    server_name ${HOST};
 
+}
 server {
     listen 443 ssl;
     server_name ${HOST};
